--- a/javascript/building-blocks/tasks/loops/loops3-download.html
+++ b/javascript/building-blocks/tasks/loops/loops3-download.html
@@ -41,7 +41,7 @@
 
 
     // Add your code here
-
+    isPrime(100)
 
     // Don't edit the code below here!
     let section = document.querySelector('section');
